--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -77,11 +77,15 @@ body {
     width: 320px;
     text-align: center; }
     .highlights .highlight .icon {
-      background: url("../images/layout/icon-highlights.png");
+      background: url("../images/layout/icon-highlights.png") no-repeat 0 0;
       display: block;
       margin: 0 auto;
       width: 80px;
       height: 80px; }
+      .highlights .highlight .icon.latest-tech {
+        background-position: 0 -80px; }
+      .highlights .highlight .icon.unmatch-safety {
+        background-position: 0 -160px; }
     .highlights .highlight h3 {
       color: black;
       font-size: 24px;
@@ -158,6 +162,7 @@ body {
     .footer .container .facebook {
       background: url("../images/layout/icon-fb.png") no-repeat center center;
       display: block;
+      margin-top: 10px;
       width: 31px;
       height: 30px;
       text-indent: 100%;
